添加动画页

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Animatedemo</h1>
       <h2 class="project-tagline">动画效果</h2>
+      <a href="srcAnimate/index.html" class="btn">点击看看效果吧！</a>
       <a href="https://github.com/pfpGit/animateDemo" class="btn">View on GitHub</a>
       <a href="https://github.com/pfpGit/animateDemo/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/pfpGit/animateDemo/tarball/master" class="btn">Download .tar.gz</a>
