--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body>
-    <section class="page-header">
-      <h1 class="project-name">Animatedemo</h1>
-      <h2 class="project-tagline">动画效果</h2>
-      <a href="srcAnimate/index.html" class="btn">点击看看效果吧！</a>
-      <a href="https://github.com/pfpGit/animateDemo" class="btn">View on GitHub</a>
-      <a href="https://github.com/pfpGit/animateDemo/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/pfpGit/animateDemo/tarball/master" class="btn">Download .tar.gz</a>
-    </section>
+<body>
+<section class="page-header">
+  <h1 class="project-name">Animatedemo</h1>
+  <h2 class="project-tagline">动画效果</h2>
+  <a href="动画stroll/index.html" class="btn">动画stroll</a>
+  <a href="srcAnimate/index.html" class="btn">动画animate-依赖animate</a>
+  <a href="https://github.com/pfpGit/animateDemo" class="btn">View on GitHub</a>
+  <a href="https://github.com/pfpGit/animateDemo/zipball/master" class="btn">Download .zip</a>
+</section>
 
-    <section class="main-content">
-      <h3>
+<section class="main-content">
+<h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
