--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <section class="page-header">
   <h1 class="project-name">Animatedemo</h1>
   <h2 class="project-tagline">动画效果</h2>
+  <a href="页面滚动内容加载动画smoove+jquery/index.html" class="btn">页面滚动内容加载动画smoove+jquery/</a>
   <a href="动画stroll/index.html" class="btn">动画stroll</a>
   <a href="srcAnimate/index.html" class="btn">动画animate-依赖animate</a>
   <a href="https://github.com/pfpGit/animateDemo" class="btn">View on GitHub</a>
