--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <section class="page-header">
 	<h1 class="project-name">AnimateDemo</h1>
 	<h2 class="project-tagline">动画效果集锦_swiper.js_animate.css_wow.js</h2>
+	<a href="https://github.com/pfpGit/animateDemo/mmt_demo" target="_blank" class="btn">swiper+animate</a>
+	<a href="https://github.com/pfpGit/animateDemo/srcAnimate" target="_blank" class="btn">wow+animate</a>
 	<a href="https://github.com/pfpGit/animateDemo" target="_blank" class="btn">GitHub源码</a>
 	<a href="https://github.com/pfpGit/animateDemo/zipball/master" class="btn">Download(zip)</a>
 	<a href="https://github.com/pfpGit/animateDemo/tarball/master" class="btn">Download(tar.gz)</a>
